fix: nested bullet points don't truncate anymore

--- a/web/src/styles/base/typography.scss
+++ b/web/src/styles/base/typography.scss
@@ -181,7 +181,7 @@ li {
 
 .usa-prose > ul li,
 .usa-prose > ol li {
-  max-width: fit-content !important;
+  max-width: 100% !important;
 }
 
 .underline {
